2004-01-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/gamma4scanimage.man: scanimage is in section 1.
	* doc/descriptions/unsupported.desc: Added Lexmark X74.

2004-01-15  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp.c, backend/mustek_pp_cis.c: Bug fix: make sure 
          that the child process releases the parallel port under all 
          circumstances. Otherwise, the parent process may no longer be 
          able to control the scanner and the lamp stays on and doesn't
          return home.
          
2004-01-15  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* include/sane/saneopts.h: Added options WHITE_LEVEL_R, WHITE_LEVEL_G,
	                           and WHITE_LEVEL_B.
	* doc/sane-teco2.man: changed --white-level to white-level-r, -g, -b
	                      update text
	* backend/teco2.c: changed WHITE_LEVEL to WHITE_LEVEL_R, _G and _B,
	                   changed calibration part for the VM3564, VM356A and
			   VM3575 (subtract highest and lowest value and then
			   divide).
	* backend/teco2.h: changed WHITE_LEVEL to WHITE_LEVEL_R, _G, _B.

2004-01-14  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/u12.c: Fixed preview bug.

2004-01-14  Gerhard Jaeger <gerhard@gjaeger.de>
	* descriptions/u12.desc: fixed wrong man-page reference, status updates.
	* backend/u12.c backend/u12.h backend/u12-hwdef.h backend/u12-scanner.h
	  backend/u12-*.c: bump up version, fixed device autodetection and corrupted
	  pictures, improved model-detection.

2004-01-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added several Canon, HP,
	  Plustek, and UMAX scanners.
	* doc/descriptions-external/epkowa.desc: Epson 1670 is supported
	  by SnapScan backend now.
	* doc/descriptions/gt68xx.desc doc/sane-gt68xx.man: Added Packard
	  Bell Diamond 2450.

2004-01-13  Karl Heinz Kremer <khk@khk.net>
	*  backend/epson-usb.c: Added product ID for RX-500
