@@ -129,6 +129,7 @@ usb 0x07b3 0x0400
 
 ##############################################################################
 # Autodetect Plustek OpticPro U16B and UT16B
+usb 0x07b3 0x0402
 usb 0x07b3 0x0403
 
 # Plustek OpticPro U16B doesn't need any manual settings
