@@ -1,4 +1,4 @@
-.TH sane-gt68xx 5 "13 Jan 2004" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
+.TH sane-gt68xx 5 "19 Jan 2004" "@PACKAGEVERSION@" "SANE Scanner Access Now Easy"
 .IX sane-gt68xx
 .SH NAME
 sane-gt68xx \- SANE backend for GT-68XX based USB flatbed scanners
@@ -198,7 +198,7 @@ automatic coarse calibration is disabled, or to make automatic coarse
 calibration faster. For the latter usage, enable debug level 3 (see below),
 scan an image and look for debug line string with "afe". Copy this line to
 .IR gt68xx.conf .
-The option has six parameters: res offset, red gain, green offset, green gain,
+The option has six parameters: red offset, red gain, green offset, green gain,
 blue offset, and blue gain.
 .PP
 A sample configuration file is shown below:
@@ -247,9 +247,11 @@ to "/tmp/config:" would result in directories "tmp/config", ".", and
 "@CONFIGDIR@" being searched (in this order).
 .TP
 .B SANE_DEBUG_GT68XX
-If the library was compiled with debug support enabled, this
-environment variable controls the debug level for this backend.  Higher
-debug levels increase the verbosity of the output. 
+If the library was compiled with debug support enabled, this environment
+variable controls the debug level for this backend.  Higher debug levels
+increase the verbosity of the output. If the debug level is set to 1 or higher,
+some debug options become available that are normally hidden. Handle them with
+care.
 
 Example: 
 export SANE_DEBUG_GT68XX=4
